...
                    .padding( 20.dp)
                    .size(45.dp)
                    .background(
                        color = BackButtonGrey,
                        shape = RoundedCornerShape(12.dp)  // Adjust shape as needed
                    )
                    .testTag("backButton")
            ) {
                Icon(
                    painter = painterResource(R.drawable.baseline_arrow_back_24),
                    contentDescription = null,
                    modifier = Modifier.size(20.dp),
                    tint = DarkGreen
...
                },
                placeholder = {
                    Text(
                        "Enter your full name",
                        modifier = Modifier
                            .padding(horizontal = 8.dp)
                            .testTag("fullnameInput"),
                        style = TextStyle(
                            fontSize = 16.sp,
                            color = LightGreen,
                            fontWeight = FontWeight.Normal,
                            fontFamily = FontFamily(Font(R.font.inter))

...
                modifier = Modifier
                    .background(White)
                    .fillMaxWidth()
                    .padding(horizontal = 25.dp)
                    .border(width = 1.dp, color = StrokeGrey, shape = RoundedCornerShape(15.dp))
                    .clip(RoundedCornerShape(15.dp))
                    .testTag("locationInput"),
                placeholder = {
                    Text("Enter your location",
                        modifier = Modifier
                            .padding(horizontal = 10.dp),
                        style = TextStyle(
                            color= LightGreen,
...
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(55.dp)
                        .padding(horizontal = 25.dp)
                        .testTag("emailInput") ,
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedContainerColor = White,
                        focusedBorderColor = StrokeGrey,
                        unfocusedContainerColor = White,
                        unfocusedBorderColor = StrokeGrey
                    ),
...
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(55.dp)
                        .padding(horizontal = 25.dp)
                        .testTag("passwordInput"),
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedContainerColor = White,
                        focusedBorderColor = StrokeGrey,
                        unfocusedContainerColor = White,
                        unfocusedBorderColor = StrokeGrey
                    ),
...
                        )
                    },
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(55.dp)
                        .padding(horizontal = 25.dp)
                        .testTag("confirmPasswordInput"),
                    colors = OutlinedTextFieldDefaults.colors(
                        focusedContainerColor = White,
                        focusedBorderColor = StrokeGrey,
                        unfocusedContainerColor = White,
                        unfocusedBorderColor = StrokeGrey
                    ),
...
                        launcher.launch(googleSignInClient.signInIntent)
                    },
                    modifier = Modifier
                        .weight(1f)
                        .height(50.dp)
                        .padding(horizontal = 10.dp)
                        .testTag("googleButton"),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = White,

                    ),
                    border = BorderStroke(2.dp ,StrokeGrey),
                    shape = RoundedCornerShape(12.dp)
...
                Button(
                    onClick = {},
                    modifier = Modifier
                        .weight(1f)
                        .height(50.dp)
                        .padding(horizontal = 10.dp)
                        .testTag("facebookButton"),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = White,

                        ),
                    border = BorderStroke(2.dp ,StrokeGrey),
                    shape = RoundedCornerShape(12.dp)
...
                Text(
                    text = "Sign In",
                    color = Color(0xFF008080),
                    fontWeight = FontWeight.SemiBold,
                    fontFamily = FontFamily(Font(R.font.inter)),
                    modifier = Modifier
                        .testTag("signInLink")
                        .clickable(){
                            val intent = Intent(context, SigninActivity::class.java)

                            context.startActivity(intent)
                    }
                )
...
